	Set timer for local recording.
	Fixed crash when no EPG and users presses up/down
	Small fixes OSD display, Schedule, SwitchTimer
	Small fix to make it work on 19x3. (Looks like 19x0 auto selects right font)
	Pressing record start Instant server recording. (Switching is done by ID so no need for same channelnumbering on server)
	Recording info shows channelnumber.
	EPG filter on 23 expanded.
	EPG filter on Cable set to Dutch / Ziggo.
	Added info window for instant records.

0.16	EPG/schedule info remove on channel switch
	Exit Guide View removes epg/schedule info
	Recording Info remove when doing up/down or OK/play
	getResume request now with timestamp to force reload every time.
	Switched to Delete from "VDR on SmartTV"
	Menu change so server options are grouped
	Show EPG from Server

0.15	ChannelGroup settings moved from settings to channelsX.js
	Removed display timeout from EPG info in channels view
	Restart portal only from MENU, in normal view Blue gives epginfo
	channelsX.js template on files section on project page
	Protection ON jumps to ChannelGroup 0 & last played channel if protection is set for current channelgroup.
	Fix left & right skips protected channel group
	Bugfix displaying recordingsmenu (No more crash when delete last recording and press down)


0.14	Resume, VDR (disk)status added (Uses "VDR on SmartTV" plugin)
	Switch timer sets ChannelGroup.
	When playing recordings key '0' rewinds to start of the recording.
	Is_new flag unset when resume is set (without reloading recordings from server)
	Setting protection on/off exits menu. Protection ON also jumps to ChannelGroup 0 & last played channel.

0.13	Bug fixes.
	Cosmetic fixes.
	

0.12	Fixed timers menu (didn't work, after you read timers from server)
	Fixed pause function with "VDR on SmartTV"
	Updated to use the new function 'is_new' from "VDR on SmartTV"
	Added (key '5') jump to next mark in recordings. With use of restfulapi plugin
	Fixed standby problems when playing recordings.