@@ -59,7 +59,7 @@ channels[10] = "S19.2E-53-1105-4016";
 channelsnames[11] = "RTL8 (S)";
 channels[11] = "S19.2E-53-1097-2035";
 channelsnames[12] = "Nickelodeon (S)";
-channels[12] = "S19.2E-53-1105-4014";
+channels[12] = "S19.2E-0-211973-28679";
 channelsnames[13] = "Comedy Central/Kindernet (S)";
 channels[13] = "S19.2E-53-1097-2036";
 channelsnames[14] = "Discovery (S)";
