@@ -25,94 +25,62 @@ channelsnames[1008] = "Veronica/DisneyXD HD (S)"
 channels[1008] = "S23.5E-3-3225-21035"
 channelsnames[1009] = "NET5 HD (S)"
 channels[1009] = "S23.5E-3-3225-21020"
-channelsnames[1010] = "RTL8 HD (S)"
-channels[1010] = "S23.5E-3-3208-7036"
-channelsnames[1011] = "Discovery HD (S)"
-channels[1011] = "S23.5E-3-3208-7010"
-channelsnames[1012] = "Eurosport HD (S)"
-channels[1012] = "S23.5E-3-3205-5033"
-channelsnames[1013] = "History HD DUT (S)"
-channels[1013] = "S23.5E-3-3205-5151"
-channelsnames[1014] = "Travel Channel HD WE (S)"
-channels[1014] = "S23.5E-3-3221-5056"
-channelsnames[1015] = "Penthouse HD. (S)"
-channels[1015] = "S23.5E-3-3202-6094"
+channelsnames[1010] = "BVN (S)";
+channels[1010] = "S19.2E-53-1105-4016";
+channelsnames[1011] = "RTL8 HD (S)"
+channels[1011] = "S23.5E-3-3208-7036"
+channelsnames[1012] = "Nickelodeon (S)";
+channels[1012] = "S19.2E-53-1105-4014";
+channelsnames[1013] = "Comedy Central/Kindernet (S)";
+channels[1013] = "S19.2E-53-1097-2036";
+channelsnames[1014] = "Discovery HD (S)"
+channels[1014] = "S23.5E-3-3208-7010"
+channelsnames[1015] = "Animal Planet/TLC (S)";
+channels[1015] = "S19.2E-53-1097-2020";
 channelsnames[1016] = "NGC HD (S)"
 channels[1016] = "S23.5E-3-3208-7015"
-channelsnames[1017] = "Film 1 Premiere HD (S)"
-channels[1017] = "S23.5E-3-3222-20955"
-channelsnames[1018] = "Sport1 SELECT HD (S)"
-channels[1018] = "S23.5E-3-3222-20960"
-channelsnames[1019] = "EDL1 HD (S)"
-channels[1019] = "S23.5E-3-3202-6092"
-channelsnames[1020] = "Brava HDTV (S)"
-channels[1020] = "S23.5E-3-3208-7025"
-channelsnames[1021] = "Omroep Zeeland Televisie (S)"
-channels[1021] = "S23.5E-3-3211-20818"
-channelsnames[1022] = "TV Drenthe (S)"
-channels[1022] = "S23.5E-3-3211-20812"
-channelsnames[1023] = "TV West (S)"
-channels[1023] = "S23.5E-3-3211-20804"
-channelsnames[1024] = "AT5 (S)"
-channels[1024] = "S23.5E-3-3211-20806"
-channelsnames[1025] = "L1MBURG (S)"
-channels[1025] = "S23.5E-3-3211-20802"
-channelsnames[1026] = "Omroep Brabant Televisie (S)"
-channels[1026] = "S23.5E-3-3211-20820"
-channelsnames[1027] = "TVL/ATV/TV Oost (S)"
-channels[1027] = "S23.5E-3-3202-6055"
-channelsnames[1028] = "een HD (S)"
-channels[1028] = "S23.5E-3-3225-21025"
-channelsnames[1029] = "Canvas HD (S)"
-channels[1029] = "S23.5E-3-3225-21030"
-channelsnames[1030] = "VTM HD (S)"
-channels[1030] = "S23.5E-3-3208-7030"
+channelsnames[1017] = "Investigation Discovery (S)"
+channels[1017] = "S23.5E-3-3202-6045"
+channelsnames[1018] = "NG Wild DUT (S)";
+channels[1018] = "S23.5E-3-3210-5145";
+channelsnames[1019] = "History HD DUT (S)"
+channels[1019] = "S23.5E-3-3205-5151"
+channelsnames[1020] = "Animax (S)";
+channels[1020] = "S19.2E-53-1097-2047";
+channelsnames[1021] = "Eurosport HD (S)"
+channels[1021] = "S23.5E-3-3205-5033"
+channelsnames[1022] = "Eurosport 2 Deutschland (S)";
+channels[1022] = "S19.2E-133-15-55";
+channelsnames[1023] = "ESPN America (S)";
+channels[1023] = "S19.2E-1-1115-13109";
+channelsnames[1024] = "MOTORS TV (S)";
+channels[1024] = "S19.2E-1-1110-9509";
+channelsnames[1025] = "NAUTICAL CHANNEL (S)";
+channels[1025] = "S19.2E-1-1096-8607";
+channelsnames[1026] = "Travel Channel HD WE (S)"
+channels[1026] = "S23.5E-3-3221-5056"
+
+channelsnames[1030] = "Film 1 Premiere HD (S)"
+channels[1030] = "S23.5E-3-3222-20955"
 channelsnames[1031] = "Film1 Family (S)"
 channels[1031] = "S23.5E-3-3222-20910"
 channelsnames[1032] = "Film1 Sundance (S)"
 channels[1032] = "S23.5E-3-3222-20915"
 channelsnames[1033] = "Film1 Action (S)"
 channels[1033] = "S23.5E-3-3222-20920"
-channelsnames[1034] = "AXN CS (S)"
-channels[1034] = "S23.5E-3-3211-20822"
-channelsnames[1035] = "AXN Crime CS (S)"
-channels[1035] = "S23.5E-3-3211-20823"
-channelsnames[1036] = "AXN SciFi CS (S)"
-channels[1036] = "S23.5E-3-3211-20824"
-channelsnames[1037] = "Journaal24/Best 24 (S)"
-channels[1037] = "S23.5E-3-3202-6010"
-channelsnames[1038] = "Holland Doc 24 (S)"
-channels[1038] = "S23.5E-3-3202-6015"
-channelsnames[1039] = "Zappelin/Zapp24 (S)"
-channels[1039] = "S23.5E-3-3202-6020"
-channelsnames[1040] = "Humor 24/Nost.Net (S)"
-channels[1040] = "S23.5E-3-3202-6025"
-channelsnames[1041] = "FoxLife (S)"
-channels[1041] = "S23.5E-3-3202-6030"
-channelsnames[1042] = "Boomerang (S)"
-channels[1042] = "S23.5E-3-3202-6035"
-channelsnames[1043] = "Discovery Science (S)"
-channels[1043] = "S23.5E-3-3202-6040"
-channelsnames[1044] = "Investigation Discovery (S)"
-channels[1044] = "S23.5E-3-3202-6045"
-channelsnames[1045] = "TEST (S)"
-channels[1045] = "S23.5E-3-3202-6050"
-channelsnames[1046] = "BiB (S)"
-channels[1046] = "S23.5E-3-3202-6060"
-channelsnames[1047] = "Disney Channel (S)"
-channels[1047] = "S23.5E-3-3202-6065"
-channelsnames[1048] = "EDL2 (S)"
-channels[1048] = "S23.5E-3-3222-20935"
-channelsnames[1049] = "Cartoon/TCM (S)"
-channels[1049] = "S23.5E-3-3222-20940"
-channelsnames[1050] = "Planet (S)"
-channels[1050] = "S19.2E-53-1097-2044"
-channelsnames[1051] = "Extreme Sports (S)"
-channels[1051] = "S23.5E-3-3222-20945"
-channelsnames[1052] = "Sport1 Voetbal (S)"
-channels[1052] = "S23.5E-3-3222-20925"
-channelsnames[1053] = "Sport1 Golf (S)"
-channels[1053] = "S23.5E-3-3222-20930"
+
+
+channelsnames[1040] = "een HD (S)"
+channels[1040] = "S23.5E-3-3225-21025"
+channelsnames[1041] = "Canvas HD (S)"
+channels[1041] = "S23.5E-3-3225-21030"
+channelsnames[1042] = "VTM HD (S)"
+channels[1042] = "S23.5E-3-3208-7030"
+
+
+
+
+
 channelsnames[1100] = "MGM HD (S)"
 channels[1100] = "S28.2E-2-2016-3807"
 channelsnames[1101] = "Sky DraRomHD (S)"
@@ -341,10 +309,6 @@ channelsnames[1602] = "MTV Live HD (S)"
 channels[1602] = "S19.2E-1-1068-28601"
 channelsnames[1603] = "Planeta HD (S)"
 channels[1603] = "S23.5E-3-3206-5410"
-channelsnames[1604] = "EroXX HD (S)"
-channels[1604] = "S23.5E-3-3206-5411"
-channelsnames[1605] = "EroXXX HD (S)"
-channels[1605] = "S23.5E-3-3206-5412"
 channelsnames[1606] = "DELUXE LOUNGE HD (S)"
 channels[1606] = "S23.5E-3-3217-6100"
 channelsnames[1607] = "UNITEL CLASSICA HD (S)"
@@ -397,13 +361,64 @@ channelsnames[1818] = "Travel Channel HD (S)"
 channels[1818] = "S23.5E-0-112109-5048"
 channelsnames[1900] = "Sky News HD (S)"
 channels[1900] = "S28.2E-2-2039-3850"
-channelsnames[1950] = "HD Demo ASTRA & RAI (S)"
-channels[1950] = "S23.5E-3-3204-7550"
-channelsnames[1951] = "HD Demo ASTRA & RAI (S)"
-channels[1951] = "S23.5E-0-211778-7550"
-channelsnames[1952] = "High TV (S)"
-channels[1952] = "S30.0W-1388-1388-3"
-channelsnames[1953] = "FOX Sports HD (S)"
-channels[1953] = "S30.0W-1388-1388-7"
+channelsnames[1934] = "AXN CS (S)"
+channels[1934] = "S23.5E-3-3211-20822"
+channelsnames[1935] = "AXN Crime CS (S)"
+channels[1935] = "S23.5E-3-3211-20823"
+channelsnames[1936] = "AXN SciFi CS (S)"
+channels[1936] = "S23.5E-3-3211-20824"
+channelsnames[1937] = "Journaal24/Best 24 (S)"
+channels[1937] = "S23.5E-3-3202-6010"
+channelsnames[1938] = "Holland Doc 24 (S)"
+channels[1938] = "S23.5E-3-3202-6015"
+channelsnames[1939] = "Zappelin/Zapp24 (S)"
+channels[1939] = "S23.5E-3-3202-6020"
+channelsnames[1940] = "Humor 24/Nost.Net (S)"
+channels[1940] = "S23.5E-3-3202-6025"
+channelsnames[1941] = "FoxLife (S)"
+channels[1941] = "S23.5E-3-3202-6030"
+channelsnames[1942] = "Boomerang (S)"
+channels[1942] = "S23.5E-3-3202-6035"
+channelsnames[1943] = "Discovery Science (S)"
+channels[1943] = "S23.5E-3-3202-6040"
+
+channelsnames[1946] = "BiB (S)"
+channels[1946] = "S23.5E-3-3202-6060"
+channelsnames[1947] = "Disney Channel (S)"
+channels[1947] = "S23.5E-3-3202-6065"
+channelsnames[1948] = "EDL2 (S)"
+channels[1948] = "S23.5E-3-3222-20935"
+channelsnames[1949] = "Cartoon/TCM (S)"
+channels[1949] = "S23.5E-3-3222-20940"
+channelsnames[1950] = "Planet (S)"
+channels[1950] = "S19.2E-53-1097-2044"
+channelsnames[1951] = "Extreme Sports (S)"
+channels[1951] = "S23.5E-3-3222-20945"
+channelsnames[1952] = "Sport1 Voetbal (S)"
+channels[1952] = "S23.5E-3-3222-20925"
+channelsnames[1953] = "Sport1 Golf (S)"
+channels[1953] = "S23.5E-3-3222-20930"
+channelsnames[1918] = "Sport1 SELECT HD (S)"
+channels[1918] = "S23.5E-3-3222-20960"
+channelsnames[1919] = "EDL1 HD (S)"
+channels[1919] = "S23.5E-3-3202-6092"
+channelsnames[1920] = "Brava HDTV (S)"
+channels[1920] = "S23.5E-3-3208-7025"
+channelsnames[1921] = "Omroep Zeeland Televisie (S)"
+channels[1921] = "S23.5E-3-3211-20818"
+channelsnames[1922] = "TV Drenthe (S)"
+channels[1922] = "S23.5E-3-3211-20812"
+channelsnames[1923] = "TV West (S)"
+channels[1923] = "S23.5E-3-3211-20804"
+channelsnames[1924] = "AT5 (S)"
+channels[1924] = "S23.5E-3-3211-20806"
+channelsnames[1925] = "L1MBURG (S)"
+channels[1925] = "S23.5E-3-3211-20802"
+channelsnames[1926] = "Omroep Brabant Televisie (S)"
+channels[1926] = "S23.5E-3-3211-20820"
+channelsnames[1927] = "TVL/ATV/TV Oost (S)"
+channels[1927] = "S23.5E-3-3202-6055"
+
+
 
 maxChan[1] = 1953; // set to max HD channel else you see 'undefined' in guide view
