@@ -69,19 +69,16 @@ channelsnames[6029] = "SCT HD (S)";
 channels[6029]="S13.0E-318-5000-10";
 channelsnames[6030] = "Redlight 3D-HD (S)";
 channels[6030]="S13.0E-318-15800-16932";
-channelsnames[6031] = "Penthouse 3D (S)";
-channels[6031]="S23.5E-3-3204-5311";
 channelsnames[6032] = "EroX HD (S)";
 channels[6032]="S23.5E-3-3206-5414";
 channelsnames[6033] = "EroXX HD (S)";
 channels[6033]="S23.5E-3-3206-5411";
 channelsnames[6034] = "EroXXX HD (S)";
 channels[6034]="S23.5E-3-3206-5412";
-
-channelsnames[6035] = "Penthouse HD1 (S)";
-channels[6035]="S23.5E-3-3226-5608";
-channelsnames[6036] = "Penthouse HD (S)";
-channels[6036]="S23.5E-3-3226-5607";
+channelsnames[6035] = "Penthouse HD (S)";
+channels[6035]="S23.5E-3-3226-5607";
+channelsnames[6036] = "Penthouse HD1 (S)";
+channels[6036]="S23.5E-3-3226-5608";
 channelsnames[6037] = "Penthouse HD2 (S)";
 channels[6037]="S23.5E-3-3226-5602";
 channelsnames[6038] = "Private Spice (S)";
@@ -92,5 +89,7 @@ channelsnames[6040] = "HUSTLER HD-3D (S)";
 channels[6040]="S13.0E-318-15800-16933";
 channelsnames[6041] = "DARING TV (S)";
 channels[6041]="S13.0E-318-15800-16931";
+channelsnames[6042] = "Penthouse HD. (S)"
+channels[6042] = "S23.5E-3-3202-6094"
 
-maxChan[6] = 6041; // set to max prt channel else you see 'undefined' in guide view
+maxChan[6] = 6042; // set to max prt channel else you see 'undefined' in guide view
